# native-wasm-components

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm  Justfile  README.md  config.json  mix.exs  package.json  publish.ts
.github/workflows/: build.yaml  ci.yml  publish.yaml  release.yaml
components/expression/: Justfile  README.md
components/expression/wit/: world.wit
components/http/: Cargo.toml  function.json
components/http/src/: lib.rs
components/http/wit/: world.wit
components/logging/src/: lib.rs
components/logging/wit/: world.wit
components/smtp/: wasmcloud.toml
components/smtp/src/: lib.rs
functions/add-variable-to-array/1.0/: Cargo.toml  function.json
functions/create-object/1.0/: Cargo.toml  function.json
functions/create/1.0/: Cargo.toml  Justfile  README.md  function.json  wasmcloud.toml
functions/delete/1.0/: Cargo.toml  README.md  function.json  wasmcloud.toml
functions/expression/1.0/: Cargo.toml  expression.wasm
functions/http/1.0/: Cargo.toml  README.md  http.wasm
functions/init-array/1.0/: Cargo.toml  function.json
functions/logging/1.0/: Cargo.toml  logging.wasm
functions/send-mail/1.0/: Cargo.toml  Justfile  README.md  function.json  wasmcloud.toml
functions/send-mail/1.0/src/: lib.rs  renderer.rs  types.rs
functions/send-mail/1.0/wit/: world.wit
functions/store-file/1.0/: .gitignore  Cargo.toml  Justfile  README.md  function.json  wasmcloud.toml
functions/store-file/1.0/src/: download.rs  lib.rs
functions/store-file/1.0/test/: integration_upload_file.rs
functions/store-file/1.0/test/common/: mod.rs
functions/store-file/1.0/test/test-components/http-router/: Cargo.toml  README.md  wasmcloud.toml
functions/store-file/1.0/test/test-components/http-router/src/: lib.rs
functions/store-file/1.0/test/test-components/http-router/wit/: world.wit
functions/store-file/1.0/test/test-components/presign-post-generator/: Cargo.toml  README.md  wasmcloud.toml
functions/store-file/1.0/test/test-components/presign-post-generator/wit/: world.wit
functions/store-file/1.0/test/test-components/upload-file/: .gitignore  Cargo.toml  Justfile  wasmcloud.toml
functions/store-file/1.0/test/test-components/upload-file/src/: lib.rs  upload.rs
functions/store-file/1.0/test/test-components/upload-file/wit/: world.wit
functions/store-file/1.0/wit/: world.wit
functions/upload-file/1.0/: .gitignore  Cargo.toml  Justfile
functions/upload-file/1.0/src/: download.rs  fs.rs  lib.rs  upload.rs
functions/upload-file/1.0/src/tests/: integration.rs  mod.rs
functions/upload-file/1.0/test/: integration_upload_file.rs
functions/upload-file/1.0/test/fixtures/: http_router.wasm  presign_post_generator.wasm  upload_file.wasm
functions/upload-file/1.0/test/test-components/http-router/src/: lib.rs
functions/upload-file/1.0/test/test-components/http-router/wit/: world.wit
functions/upload-file/1.0/test/test-components/presign-post-generator/src/: lib.rs
functions/upload-file/1.0/wit/: world.wit
helper/data-api/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
helper/http-wrapper/: Cargo.toml  wadm.yml  wasmcloud.toml
helper/smtp-provider/: Cargo.toml  README.md
lib/: native_wasm_components.ex
lib/native_wasm_components/: application.ex  server_mock.ex
test/: native_wasm_components_test.exs  test_helper.exs
test/native_wasm_components/: expression_test.exs  http_test.exs  logger_test.exs
test/rust/: README.md  integration_upload_file.rs
wasmcloud/: Cargo.toml  Justfile  deploy.sh  local.wadm.yaml  prod.wadm.yaml  template  wadm.template.yaml
wasmcloud/tests/: smtp_integration_test.rs
(+52 files in other folders)
