[package]
name = "send-mail"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wstd = "0.6.5"
mime_guess = { version = "2", default-features = false }
liquid = "0.26"
tracing = "0.1"
