[package]
name = "upload-file"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcloud-component = "0.2.0"
anyhow = "1"
tracing = "0.1.44"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wit-bindgen = "0.47.0"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
mime_guess = "2.0"
urlencoding = "2.1"
waki = { git = "https://github.com/Aditya1404Sal/waki.git", features = ["multipart"] }