[package]
name = "upload-file"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
anyhow = "1"
tracing = "0.1.44"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wit-bindgen = "0.47.0"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
mime_guess = "2.0"
urlencoding = "2.1"
waki = { git = "https://github.com/Aditya1404Sal/waki.git", features = ["multipart"] }

[dev-dependencies]
wash-runtime = { git = "https://github.com/Aditya1404Sal/wash", branch = "mcp-testing-full"}
anyhow = "1.0.101"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
serde_json = "1.0"
semver = "1"

[[test]]
name = "integration_upload_file"
path = "test/integration_upload_file.rs"