[package]
name = "presign-post-generator"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
wasmcloud-component = "0.2.0"
anyhow = "1"
tracing = "0.1.44"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wit-bindgen = "0.47.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
base64 = "0.21"